Refatorações gerais para simplicidade.